fix: Fixed bug with Redis immutable list JSON serialization (#79)